# hyperium-red-core

./: .gitignore  Cargo.toml  INFORME-TECNICO-FINAL.md  INFORME-TECNICO-v05.md  INFORME-TECNICO-v10.md  INFORME-TECNICO.md  LINKEDIN-v10.md  LINKEDIN.md  README.md
screenshots/: 01-dashboard.html  02-dictamen.txt  03-techniques-credential.html  04-lateral-ad-enum.html  05-persistence-info.html
src/: compliance.rs  error.rs  evidence.rs  impact.rs  main.rs  mitre.rs  recon.rs  types.rs
