[package]
name = "hyperium-red-core"
version = "0.1.0"
edition = "2021"
description = "Hyperiumia RED-CORE - Legally Evidenced Threat Engine"
authors = ["Patricio Tirado <patricio@hyperiumia.com>"]
license = "Proprietary"

[[bin]]
name = "red-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
colored = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
